hphp/hack/test/typecheck/unsafe_block2.php
<?hh // partial

function f(): int {
  {
    // UNSAFE
  }
  return 'hi';
}
